syntax = "proto3";
package member_role;

option go_package = "nfxid/protos/gen/tenants/member_role;memberrolepb";

import "google/protobuf/timestamp.proto";

// 成员角色信息
message MemberRole {
  string id = 1;                           // 成员角色ID (UUID)
  string tenant_id = 2;                    // 租户ID (UUID)
  string member_id = 3;                    // 成员ID (UUID)
  string role_id = 4;                      // 角色ID (UUID)
  google.protobuf.Timestamp assigned_at = 5;    // 分配时间
  optional string assigned_by = 6;        // 分配者ID (UUID)
  optional google.protobuf.Timestamp expires_at = 7; // 过期时间
  optional string scope = 8;              // 作用域 (varchar(100))
  optional google.protobuf.Timestamp revoked_at = 9; // 撤销时间
  optional string revoked_by = 10;        // 撤销者ID (UUID)
  optional string revoke_reason = 11;     // 撤销原因 (text)
}

// MemberRole 服务 - 供其他服务通过 gRPC 管理成员角色
service MemberRoleService {
  // 根据ID获取成员角色
  rpc GetMemberRoleByID (GetMemberRoleByIDRequest) returns (GetMemberRoleByIDResponse);
  
  // 根据成员ID获取成员角色列表
  rpc GetMemberRolesByMemberID (GetMemberRolesByMemberIDRequest) returns (GetMemberRolesByMemberIDResponse);
}

// MemberRole Service Messages
message GetMemberRoleByIDRequest {
  string id = 1;
}

message GetMemberRoleByIDResponse {
  MemberRole member_role = 1;
}

message GetMemberRolesByMemberIDRequest {
  string member_id = 1;
}

message GetMemberRolesByMemberIDResponse {
  repeated MemberRole member_roles = 1;
}
